--- a/ProjekatWeb/WebContent/css/homepage.css
+++ b/ProjekatWeb/WebContent/css/homepage.css
@@ -134,3 +134,67 @@ input[type="submit"]:hover {
 .fa{
 	color:white;
 }
+.grid-container{
+display: grid;
+  grid-gap: 20px;
+  grid-template-columns: auto auto auto;
+  padding: 20px;
+  margin-top: 10%;
+  width: 100%;
+}
+.grid-item{
+  padding: 50px;
+  font-size: 35px;
+  text-align: center;
+  cursor: pointer;
+}
+#search{
+	margin-top: 6%;
+	display: inline-block;
+	width: 40%;
+	margin-left: 15%;
+}
+input[name="search-button"] {
+	width: 10%;
+	height: 30px;
+}
+img{
+	width: 100%;
+}
+p{
+	font-size:20px;
+}
+#message{
+	color: red;
+	font-weight: bold;
+	font-size: 16px;
+	margin: 0;
+}
+@media screen and (max-width:700px) {
+.logo{display: none;}
+.menu>.menu-content{float: left;}
+#search{
+	margin-top: 20%;
+	width: 55%;
+	margin-left: 3%;
+}
+input[name="search-button"] {width: 30%;}
+	.arrow-up{left:150px;}
+.login-form{left:5px}
+.grid-container{grid-column-gap:5px;grid-row-gap:30px;
+padding: 0;
+}
+.grid-item{
+	margin-left: 15px;
+	padding: 0;
+}
+img{
+	width: 80px;
+}
+}
+@media screen and (max-height:400px) {
+	.menu>.menu-content{
+	margin-top:0%;}
+	.arrow-up{left:150px; top:30px;}
+.login-form{left:20px;top:50px;}
+}
