--- a/ProjekatWeb/WebContent/css/homepage.css
+++ b/ProjekatWeb/WebContent/css/homepage.css
@@ -29,12 +29,12 @@ nav{
 	width: 1000px;
 	margin: 0 auto;
 	position: relative;
-	height: 40px;
+	height: 100%;
 }
 
 .nav-container>.logo{
 	width: 400px;
-	height: 40px;
+	height: 100%;
 	float: left;
 	padding-top: 10px;
 }
@@ -45,11 +45,11 @@ nav{
 }
 .menu{
 	width: 100%;
-	height: 40px;
+	height: 100%;
 }
 .menu>.menu-content{
 	width: 250px;
-	height: 40px;
+	height: 73%;
 	float: right;
 	font-family: sans-serif ,Arial;
 	font-size: 20px;
