--- a/ProjekatWeb/WebContent/css/homepage.css
+++ b/ProjekatWeb/WebContent/css/homepage.css
@@ -80,7 +80,7 @@ span{
 	width: 300px;
 	height: auto;
 	position: absolute;
-	background: #333;
+	background: black;
 	left:770px;
 	top:70px;
 	border-radius: 3px;
@@ -138,7 +138,7 @@ input[type="submit"]:hover {
 display: grid;
   grid-gap: 20px;
   grid-template-columns: auto auto auto;
-  padding: 20px;
+  padding-top: 20px;
   margin-top: 10%;
   width: 100%;
 }
@@ -164,12 +164,70 @@ img{
 p{
 	font-size:20px;
 }
+
+.footer-container{
+	width: 100%;
+	height: 25%;
+	background: #000033;
+	opacity: 0.6;
+	display: grid;
+	grid-template-columns: repeat(3,1fr);
+	grid-template-rows:auto;
+	grid-gap:20px;
+}
+
+.notice{
+	height: 100%;
+	grid-column:1;
+	margin-left: 10%;
+	padding-top: 10px;
+}
+
+#notice-paragraph{
+	color: white;
+	font-size: 16px;
+}
+
+.logo-rights{
+	grid-column:2/2;
+}
+
+.rights{
+	color: white;
+	font-size: 1em;
+	padding: 2%;
+}
+.footer-logo{
+	color: white;
+	font-size: 24px;
+	margin-left: 22%;
+	margin-top: 10%;
+	}
+.social-links{
+	grid-column:3;
+}
+
+.social-links>p{
+	color: white;
+	font-size: 20px;
+	padding: 2%;
+	margin-left: 7%;
+}
+.social-links>i{
+padding: 2%;
+}
+.social-links>i:hover{
+color: blue;
+cursor: pointer;	
+}
 #message{
 	color: red;
 	font-weight: bold;
 	font-size: 16px;
 	margin: 0;
 }
+
+
 @media screen and (max-width:700px) {
 .logo{display: none;}
 .menu>.menu-content{float: left;}
@@ -180,9 +238,24 @@ p{
 }
 input[name="search-button"] {width: 30%;}
 	.arrow-up{left:150px;}
-.login-form{left:5px}
-.grid-container{grid-column-gap:5px;grid-row-gap:30px;
+.login-form{left:70px;width: 200px; opacity: 1;background: black;}
+
+input[type="text"], input[type="password"]{
+	width: 100px;
+}
+input[type="submit"]{
+	width: 40%;
+}
+.login-form>form{
+	margin:1em 2em;
+	width: 150px;
+}
+#createAccountLink{
+	top:15px;
+}
+.grid-container{grid-column-gap:5px;grid-row-gap:15px;
 padding: 0;
+height: 50%;
 }
 .grid-item{
 	margin-left: 15px;
@@ -191,10 +264,16 @@ padding: 0;
 img{
 	width: 80px;
 }
+.notice{display: none;}
+.footer-container{grid-template-columns:auto ;margin-top: -6%;}
+.logo-rights{display: none;}
+.social-links{grid-column:1;}
 }
+
+
 @media screen and (max-height:400px) {
 	.menu>.menu-content{
 	margin-top:0%;}
 	.arrow-up{left:150px; top:30px;}
-.login-form{left:20px;top:50px;}
+.login-form{left:60px;top:50px;}
 }
