--- a/ProjekatWeb/WebContent/css/homepage.css
+++ b/ProjekatWeb/WebContent/css/homepage.css
@@ -15,7 +15,6 @@ body{
  -webkit-background-size:cover;
  -moz-background-size:cover;
  -o-background-size:cover;
- transition: background-color .5s;
 }
 .topnav {
     background: #000033;
@@ -57,10 +56,6 @@ body{
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
-}
-#main {
-    transition: margin-left .5s;
-    padding: 16px;
 }
 input[type=text], input[type=password] {
     width: 100%;
@@ -129,19 +124,35 @@ input[type="submit"]:hover {
 .fa{
 	color:white;
 }
-.grid-container{
-display: grid;
-  grid-gap: 20px;
-  grid-template-columns: auto auto auto;
-  padding-top: 20px;
-  margin-top: 10%;
-  width: 100%;
+.row{
+	display: -ms-flexbox; 
+    display: flex;
+    -ms-flex-wrap: wrap; 
+    flex-wrap: wrap;
+    padding: 0 4px;
 }
-.grid-item{
-  padding: 50px;
-  font-size: 35px;
-  text-align: center;
-  cursor: pointer;
+.column{
+ 	-ms-flex: 25%; 
+    flex: 25%;
+    max-width: 25%;
+    padding: 6px 4px;
+}
+.container{
+	padding: 2em 3em;
+	background-image:url("../photos/pozadina1.jpg");
+	background-repeat: no-repeat;
+ 	background-size: cover;
+	width: 100%;
+	height: 90%;
+	overflow-x:auto;
+	-webkit-user-select: none;        
+	-moz-user-select: none;
+	-ms-user-select: none;
+}
+
+.column img{
+	width: 60%;
+	border-radius:5%; 
 }
 #search{
 	margin-top: 2%;
@@ -160,29 +171,26 @@ input[name="search-button"] {
 	width: 10%;
 	height: 30px;
 }
-img{
-	width: 100%;
-}
 p{
 	font-size:20px;
+	text-align: center;
 }
 
 .footer-container{
 	width: 100%;
-	height: 25%;
 	background: #000033;
 	opacity: 0.6;
-	display: grid;
-	grid-template-columns: repeat(3,1fr);
-	grid-template-rows:auto;
-	grid-gap:20px;
+   	left: 0;
+   	bottom:0;
+   	position: relative;
 }
 
 .notice{
 	height: 100%;
 	grid-column:1;
-	margin-left: 10%;
+	margin-left: 2%;
 	padding-top: 10px;
+	display: inline-block;
 }
 
 #notice-paragraph{
@@ -191,7 +199,9 @@ p{
 }
 
 .logo-rights{
-	grid-column:2/2;
+display: inline-block;
+margin-left: 100px;
+width: 350px;
 }
 
 .rights{
@@ -206,7 +216,9 @@ p{
 	margin-top: 10%;
 	}
 .social-links{
-	grid-column:3;
+	display: inline-block;
+	margin-left: 15%;
+	width: 200px;
 }
 
 .social-links>p{
@@ -237,24 +249,26 @@ cursor: pointer;
 }
 input[name="search-button"] {width: 30%;}
 	
-}
-input[name="search"]{
-	width: 40%;
-}
+input[name="search"]{width: 40%;}
 
-.grid-container{grid-column-gap:5px;grid-row-gap:15px;
-padding: 0;
-height: 50%;
+.topnav>a{
+	font-size: 20px;
+	padding-top: 10px;
+	padding-left: 5px;
 }
-.grid-item{
-	margin-left: 15px;
-	padding: 0;
+#search{
+	margin-top: 2%;
+	width: 55%;
+	margin-left: 3%;
 }
-img{
-	width: 80px;
-}
-.notice{display: none;}
-.footer-container{grid-template-columns:auto ;margin-top: -6%;}
+input[name="search-button"] {width: 30%;}
+
+.notice{display: none;}	
 .logo-rights{display: none;}
-.social-links{grid-column:1;}
+.social-links{width: 100%;}
+ .column {
+        -ms-flex: 100%;
+        flex: 100%;
+        max-width: 100%;
+    }
 }
