--- a/ProjekatWeb/WebContent/css/video.css
+++ b/ProjekatWeb/WebContent/css/video.css
@@ -41,7 +41,6 @@ body {
 .topnav a:not(:first-child){
 	float: right;
 }
-
 .topnav a:hover {
 	background-color: #ddd;
 	color: black;
@@ -50,13 +49,12 @@ body {
 .container {
 	display: grid;
 	grid-template-columns: repeat(2, auto);
-	grid-auto-rows:minmax(400px,auto);
+	grid-auto-rows: minmax(400px, auto);
 }
 
 .video-container {
 	padding-top: 2em;
 	padding-left: 2em;
-
 }
 
 iframe {
@@ -71,15 +69,19 @@ iframe {
 	background: white;
 	border-top: hidden;
 	border-left: hidden;
-	border-right:hidden;
-	border-bottom: 3px inset; 
+	border-right: hidden;
+	border-bottom: 3px inset;
 }
-h2{
+
+h2 {
 	text-align: left;
 	overflow: hidden;
 	padding: 2px;
+	word-wrap: break-word;
+	word-break: break-all;
 }
-.owner-info{
+
+.owner-info {
 	padding-top: 2px;
 	width: 80%;
 	height: auto;
@@ -87,40 +89,53 @@ h2{
 	overflow: hidden;
 	margin-bottom: 40px;
 }
-.user-link{display: inline-block;}
-.user-link>a{
+
+.user-link {
+	display: inline-block;
+}
+
+.user-link>a {
 	color: gray;
 	text-decoration: none;
 }
-p{
-	font-size:20px;
+
+p {
+	font-size: 20px;
 	text-align: left;
 	overflow: auto;
+	word-wrap: break-word;
+	word-break: break-all;
 }
-.avatar{
+
+.avatar {
 	width: 30px;
 	height: 30px;
 	border-radius: 50%;
 	vertical-align: middle;
 }
-i{
+
+i {
 	cursor: pointer;
 	color: gray;
 }
-.video-info>p{
+
+.video-info>p {
 	display: inline-block;
 }
-.like-dislike{
+
+.like-dislike {
 	float: right;
-	
 }
-.like-dislike>p{
+
+.like-dislike>p {
 	display: inline-block;
 }
-.fa{
+
+.fa {
 	font-size: 24px;
 }
-button {
+
+#subscribe {
 	color: white;
 	background: red;
 	border: none;
@@ -131,57 +146,73 @@ button {
 	font-weight: bold;
 	cursor: pointer;
 }
-#menu{ margin: 10px 50px 0 0; float: right;}
 
-#description{display: block; overflow: auto; margin-top: 20px; word-wrap: break-word;
-word-break: break-all; border-top: 3px solid gray; }
-#date{
-	display:block;
-	margin-top:10px;
+#menu {
+	margin: 10px 50px 0 0;
+	float: right;
+
+}
+
+#description {
+	display: block;
+	overflow: auto;
+	margin-top: 20px;
+	word-wrap: break-word;
+	word-break: break-all;
+	border-top: 3px solid gray;
+}
+
+#date {
+	display: block;
+	margin-top: 10px;
 	font-size: 16px;
 }
-.comment{
+
+.comment {
 	width: 80%;
 	height: auto;
 	background: white;
 	border-left: none;
 	border-right: none;
-	border-bottom: 1px  solid gray;
-	border-top: 1px  solid gray;
+	border-bottom: 1px solid gray;
+	border-top: 1px solid gray;
 	overflow: auto;
 	word-wrap: break-word;
 	word-break: break-all;
 }
-.user-menu{
+
+.user-menu {
 	background: gray;
 	height: 30%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 20%;
-    right: 1%;
-    background-color: #333;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
+	width: 0;
+	position: fixed;
+	z-index: 1;
+	top: 20%;
+	right: 1%;
+	background-color: #333;
+	overflow-x: hidden;
+	transition: 0.5s;
+	padding-top: 60px;
 }
+
 .user-menu .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
+	position: absolute;
+	top: 0;
+	right: 25px;
+	font-size: 36px;
+	margin-left: 50px;
 }
-.user-menu>a:not(:first-child){
+
+.user-menu>a:not(:first-child) {
 	text-decoration: none;
 	color: white;
 	display: block;
 	padding: 10px;
-	text-align: center;
 	opacity: 0.6;
-	font-size: 22px;
+	text-align: center;
 }
-.user-menu>a:first-child{
+
+.user-menu>a:first-child {
 	padding: 0;
 	color: white;
 	text-decoration: none;
@@ -190,35 +221,79 @@ word-break: break-all; border-top: 3px solid gray; }
 	color: white;
 	opacity: 1;
 }
-.menu-button{
-	grid-column:2;
+.menu-button {
+	grid-column: 2;
 }
+
+.add-comment {
+	width: 80%;
+	height: auto;
+	background: white;
+	border-left: none;
+	border-right: none;
+	border-bottom: 1px solid gray;
+	border-top: 1px solid gray;
+	overflow: auto;
+	word-wrap: break-word;
+	word-break: break-all;
+}
+
+textarea {
+	width: 70%;
+	height: 70px;
+	border: none;
+	font-size: 16px;
+}
+
+#submit-comment {
+	color: white;
+	background: green;
+	border: none;
+	float: right;
+	height: 30px;
+	width: 65px;
+	border-radius: 5%;
+	font-weight: bold;
+	cursor: pointer;
+	margin: 10px;
+}
+
 @media screen and (max-width:600px) {
 	.topnav>a {
 		font-size: 20px;
 		padding-top: 10px;
 		padding-left: 5px;
 	}
-	.container{
-	grid-template-rows:20% auto;
+	.container {
+		grid-template-rows: 20% auto;
 	}
 	iframe {
 		height: 150px;
 		width: 300px;
 	}
 	.video-container {
-		padding-left:0;
+		padding-left: 0;
 		padding-top: 20px;
-		grid-column:1/3;
-		grid-row:2;
+		grid-column: 1/3;
+		grid-row: 2;
 	}
- 	.fa{
- 	font-size: 20px;}
-	p{
-	font-size: 16px;
+	.fa {
+		font-size: 20px;
 	}
-	.video-info{width: 100%;}
-	.owner-info{width: 100%}
-	#menu{margin:10px 10px 0 0;float: right;}
-	
+	p {
+		font-size: 16px;
+	}
+	.video-info {
+		width: 100%;
+	}
+	.owner-info {
+		width: 100%
+	}
+	#menu {
+		margin: 10px 10px 0 0;
+		float: right;
+	}
+	textarea {
+		width: 100%;
+	}
 }
