--- a/ProjekatWeb/WebContent/css/user.css
+++ b/ProjekatWeb/WebContent/css/user.css
@@ -18,7 +18,6 @@ body {
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
-	overflow: auto;
 }
 
 .topnav {
@@ -51,14 +50,16 @@ body {
 }
 
 .container {
-	display: grid;
-	grid-template-columns: 25% 50% auto;
-	grid-auto-rows: auto;	
+		padding: 3em 3em;
+	background-image:url("../photos/pozadina1.jpg");
+	background-repeat: no-repeat;
+ 	background-size: cover;
 	width: 100%;
-	height: 100%;
-	grid-column-gap: 50px;
-	overflow: auto;
-	margin-top: 2%;
+	height: 90%;
+	overflow-x:auto;
+	-webkit-user-select: none;        
+	-moz-user-select: none;
+	-ms-user-select: none;
 }
 
 .user-info {
@@ -74,7 +75,10 @@ body {
 img {
 	width: 100%;
 }
-
+#subs{
+	margin-top: 5%;
+	border-top: 2px solid black;
+}
 .container-info {
 	padding: 0 16px;
 }
@@ -107,11 +111,28 @@ p {
 }
 
 .row {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-gap: 5px;
-	padding: 5px;
-	overflow: auto;
+	display: -ms-flexbox; 
+    display: flex;
+    -ms-flex-wrap: wrap; 
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+.column{
+	-ms-flex: 25%; 
+    flex: 25%;
+    max-width: 25%;
+    padding: 6px 4px;
+}
+.column2{
+	-ms-flex: 15%; 
+    flex: 15%;
+    max-width: 15%;
+    padding: 6px 4px;
+}
+.content{
+	margin: 0;
+	height: auto; 
+	margin-left: 80px;;
 }
 .content img {
 	width: 60%;
@@ -130,7 +151,7 @@ p {
 .date-rating {
 	text-align: left;
 	font-size: 18px;
-	margin-left: 20%;
+	margin-left: 15%;
 	color: gray;
 }
 
@@ -157,55 +178,19 @@ a {
 	word-break: break-all;
 	text-align: left;
 }
-.videos{
-	border-bottom: 2px solid gray;
-}
-
-#menu{
-	float: right;
-	color: gray;
-	margin: 0 50px 0 0;
-	cursor: pointer;
-}
-.user-menu {
-	background: gray;
-	height: 30%;
-	width: 0;
-	position: fixed;
-	z-index: 1;
-	top: 20%;
-	right: 1%;
-	background-color: #333;
-	overflow-x: hidden;
-	transition: 0.5s;
-	padding-top: 60px;
-}
-
-.user-menu .closebtn {
-	position: absolute;
-	top: 0;
-	right: 25px;
-	font-size: 36px;
+.video{
+	
 	margin-left: 50px;
+	display: grid;
+	grid-template-rows:auto auto;
 }
 
-.user-menu>a:not(:first-child) {
-	text-decoration: none;
-	color: white;
-	display: block;
-	padding: 10px;
-	opacity: 0.6;
-	text-align: center;
-}
 
-.user-menu>a:first-child {
-	padding: 0;
-	color: white;
-	text-decoration: none;
-}
-.user-menu>a:hover:not(:first-child) {
-	color: white;
-	opacity: 1;
+.subscriber{
+	grid-row:2;	
+	display:grid;
+	grid-template-columns:auto auto;
+	grid-gap:20px;
 }
 
 @media screen and (max-width:600px) {
@@ -215,9 +200,19 @@ a {
 			padding-left: 5px;
 		}
 .topnav a:first-child {display: none;}
-.container {grid-template-rows: auto auto auto; }
-.row{grid-template-rows: auto auto auto;}
-	
-img{width: 30%;}
+
 .card{margin: 0;padding: 0;}
+.content{margin-left: 30px; margin-top: 30px;}
+.content .avatar{width: 20px;height: 20px;}
+.video{margin: 0;}
+ .column {
+        -ms-flex: 100%;
+        flex: 100%;
+        max-width: 100%;
+    }
+    .column2{
+     -ms-flex: 100%;
+        flex: 100%;
+        max-width: 100%;
+    }
 }
