--- a/ProjekatWeb/WebContent/css/video.css
+++ b/ProjekatWeb/WebContent/css/video.css
@@ -48,7 +48,7 @@ body {
 
 .container {
 	display: grid;
-	grid-template-columns: repeat(2, auto);
+	grid-template-columns: 60% auto;
 	grid-auto-rows: minmax(400px, auto);
 }
 
@@ -135,8 +135,8 @@ i {
 	font-size: 24px;
 }
 
-#subscribe {
-	color: white;
+#subscribe,#unsubscribe{
+	color:white;
 	background: red;
 	border: none;
 	float: right;
@@ -243,6 +243,7 @@ textarea {
 	height: 70px;
 	border: none;
 	font-size: 16px;
+	resize: none;
 }
 
 #submit-comment {
@@ -258,6 +259,86 @@ textarea {
 	margin: 10px;
 }
 
+.collapsible {
+    background-color: #777;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 30%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+}
+
+.active, .collapsible:hover {
+    background-color: #555;
+}
+
+.content {
+    padding: 0 18px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    background-color: gray;
+    width: 80%;
+}
+
+.container-cb {
+    display: inline-block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.container-cb input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    border-radius: 50%;
+}
+
+.container-cb:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+
+.container-cb input:checked ~ .checkmark {
+    background-color: #2196F3;
+}
+
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+.container-cb input:checked ~ .checkmark:after {
+    display: block;
+}
+
+.container-cb .checkmark:after {
+ 	top: 9px;
+	left: 9px;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background: white;
+}
 @media screen and (max-width:600px) {
 	.topnav>a {
 		font-size: 20px;
