--- a/ProjekatWeb/WebContent/css/video.css
+++ b/ProjekatWeb/WebContent/css/video.css
@@ -37,7 +37,12 @@ body {
 	text-decoration: none;
 	font-size: 24px;
 }
-
+#commentLikeButton{
+	border: none;
+	background: white;
+	cursor: pointer;
+	margin: 3px;
+}
 .topnav a:not(:first-child){
 	float: right;
 }
