--- a/ProjekatWeb/WebContent/css/homepage.css
+++ b/ProjekatWeb/WebContent/css/homepage.css
@@ -9,41 +9,62 @@ html, body {
 	height: 100%;
 }
 body{
- background-image:url("../photos/pozadina1.jpg");
- background-repeat: no-repeat;
- background-size: cover;
- -webkit-background-size:cover;
- -moz-background-size:cover;
- -o-background-size:cover;
+ background: #c3c3c3;
 }
 .topnav {
-    background: #000033;
-	opacity: 0.6;
-    overflow: hidden;
-    height: 10%;
+  overflow: hidden;
+  background-color: #333;
 }
+
 .topnav a {
-	float:left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 18px 16px;
-    text-decoration: none;
-    font-size: 24px;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 24px;
+}
+#logo{
+	display: inline-block;
 }
 .topnav a:not(:first-child){
 	float: right;
+	opacity: 0.6;
 }
- .active {
-    background-color: #4CAF50;
-    color: white;
-}
+
 .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+   opacity: 1;
 }
-.topnav .icon {
-    display: none;
+
+
+
+.topnav .search-container {
+  float: right;
+  margin-top: 5px;
+  margin-right: 3%;
+}
+
+.topnav input[name=search] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+  background: #f1f1f1;
+}
+
+.topnav .search-container button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #2196F3;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav .search-container button:hover {
+  background: #0b7dda;
 }
 .sidelogin {
     height: 100%;
@@ -57,7 +78,7 @@ body{
     transition: 0.5s;
     padding-top: 60px;
 }
-input[type=text], input[type=password] {
+#userName,#password {
     width: 90%;
     padding: 15px;
     margin: 5px 0 22px 10px;
@@ -70,7 +91,7 @@ input[type=text], input[type=password] {
 	color: gray;
 	cursor: pointer;
 }
-button {
+input[type=submit] {
     background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
@@ -99,26 +120,11 @@ label{
 	color: white;
 	font-family: Arial;
 	font-size: 18px;
+	margin-left: 15px;
 }
 input[name=text]:focus, input[type=password]:focus {
     background-color: #ddd;
     outline: none;
-}
-input[type=submit] {
-	width: 95%;
-	height: 35px;
-	background: #0b8256;
-	font-size: 20px;
-	font-weight: bold;
-	font-family: sans-serif,Arial;
-	color:white;
-	border: 0px;
-	border-radius: 3px;
-	outline: none;
-	cursor: pointer;
-}
-input[type="submit"]:hover {
-	background: #0a4b33;
 }
 
 .fa{
@@ -139,9 +145,7 @@ input[type="submit"]:hover {
 }
 .container{
 	padding: 3em 3em;
-	background-image:url("../photos/pozadina1.jpg");
-	background-repeat: no-repeat;
- 	background-size: cover;
+	background:#c3c3c3;
 	width: 100%;
 	height: 90%;
 	overflow-x:auto;
@@ -154,53 +158,48 @@ input[type="submit"]:hover {
 .content img{
 	width: 60%;
 	border-radius:5%; 
+	border: 1px solid #333;
 }
 
-h4{
+h2{
 	text-align: center;
 	overflow: hidden;
+	word-wrap: break-word;
+	word-break: break-all;
+}
+h2>a{
+		color: #333
 }
 .user-link{
 	text-align: left;
 	font-size: 18px;
 	margin-left: 15%;
+	word-wrap: break-word;
+	word-break: break-all;
 }
 .user-link>a{
-	color: gray;
+	color: #333;
 }
 .date-rating{
 	text-align: left;
 	font-size: 18px;
 	margin-left: 20%;
-	color: gray;
+	color: #333;
+	word-wrap: break-word;
+	word-break: break-all;
 }
 
-#search{
-	margin-top: 2%;
-	display: inline-block;
-	width: 40%;
-	margin-left: 15%;
-	height: 40px;
-	border: 0px;
-	outline: none;
-	box-shadow: inset 0 0 8px #eee;
-	border-radius:5px; 
-	font-family: sans-serif,Arial;
-	font-size: 14px;
-}
-input[name="search-button"] {
-	width: 10%;
-	height: 30px;
-}
+
 p{
 	font-size:20px;
 	text-align: center;
+	word-wrap: break-word;
+	word-break: break-all;
 }
 
 .footer-container{
 	width: 100%;
-	background: #000033;
-	opacity: 0.6;
+	background: #333;
    	left: 0;
    	bottom:0;
    	position: relative;
@@ -217,6 +216,7 @@ p{
 #notice-paragraph{
 	color: white;
 	font-size: 16px;
+
 }
 
 .logo-rights{
@@ -229,6 +229,7 @@ width: 350px;
 	color: white;
 	font-size: 1em;
 	padding: 2%;
+
 }
 .footer-logo{
 	color: white;
@@ -271,27 +272,26 @@ a{
 
 
 @media screen and (max-width:600px) {
-
+#logo{display: none;}
+.topnav .search-container {
+    float: none;
+  }
+  .topnav a, .topnav input[type=text], .topnav .search-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type=text] {
+    border: 1px solid #ccc;  
+  }
 .topnav>a{
 	font-size: 20px;
 	padding-top: 10px;
 	padding-left: 5px;
 }
-#search{
-	margin-top: 2%;
-	width: 55%;
-	margin-left: 3%;
-}
-input[name="search-button"] {width: 30%;}
-	
-input[name="search"]{width: 40%;}
-
-#search{
-	margin-top: 2%;
-	width: 55%;
-	margin-left: 3%;
-}
-input[name="search-button"] {width: 30%;}
 
 .notice{display: none;}	
 .logo-rights{display: none;}
