--- a/ProjekatWeb/WebContent/css/register.css
+++ b/ProjekatWeb/WebContent/css/register.css
@@ -1,19 +1,39 @@
 @charset "UTF-8";
-body {
-	font-family: Arial;
-	background: url("../photos/pozadina1.jpg");
-	 background-repeat: no-repeat;
- background-size: cover;
- -webkit-background-size:cover;
- -moz-background-size:cover;
- -o-background-size:cover;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html, body {
 	width: 100%;
 	height: 100%;
 }
-* 
-{box-sizing: border-box ;
-	margin: 0;
-	padding: 0;
+body{
+ background: #c3c3c3;
+}
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 24px;
+}
+#logo{
+	display: inline-block;
+}
+.topnav a:not(:first-child){
+	float: right;
+	opacity: 0.6;
+}
+
+.topnav a:hover {
+   opacity: 1;
 }
 
 form{
@@ -88,33 +108,6 @@ button:hover {
     clear: both;
     display: table;
 }
-.topnav {
-  	background: #000033;
-	opacity: 0.6;
-    overflow: hidden;
-    
-}
-
-.topnav a {
-    float: right;
-    margin-right:3%;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 24px;
-}
-
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-
-.topnav .icon {
-    display: none;
-}
-
 @media screen and (max-width: 400px) {
     .cancelbtn, .signupbtn {
        width: 100%;
@@ -124,21 +117,15 @@ button:hover {
     width: 90%;
     }
     
-   .topnav a:first-child, {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-  .topnav.responsive {position: relative;}
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
+#logo{display: none;}
+
+  .topnav a {
     float: none;
     display: block;
     text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
   }
     
 }
