--- a/ProjekatWeb/WebContent/css/user.css
+++ b/ProjekatWeb/WebContent/css/user.css
@@ -1,59 +1,45 @@
 @charset "UTF-8";
 
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-
 html, body {
 	width: 100%;
 	height: 100%;
 }
-
-body {
-	background-image: url("../photos/pozadina1.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
+body{
+ background: #c3c3c3;
 }
-
 .topnav {
-	background: #000033;
-	opacity: 0.6;
-	overflow: hidden;
-	height: 10%;
+  overflow: hidden;
+  background-color: #333;
 }
 
 .topnav a {
-	float: left;
-	display: block;
-	color: #f2f2f2;
-	text-align: center;
-	padding: 18px 16px;
-	text-decoration: none;
-	font-size: 24px;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 24px;
 }
-
+#logo{
+	display: inline-block;
+}
 .topnav a:not(:first-child){
 	float: right;
-}
-.topnav a:hover {
-	background-color: #ddd;
-	color: black;
+	opacity: 0.6;
 }
 
-.topnav .icon {
-	display: none;
+.topnav a:hover {
+   opacity: 1;
 }
 
 .container {
 		padding: 3em 3em;
-	background-image:url("../photos/pozadina1.jpg");
-	background-repeat: no-repeat;
- 	background-size: cover;
+	background:#c3c3c3;
 	width: 100%;
 	height: 90%;
 	overflow-x:auto;
@@ -137,6 +123,7 @@ p {
 .content img {
 	width: 60%;
 	border-radius: 5%;
+	border:1px solid #333;
 }
 
 .user-link {
@@ -145,14 +132,14 @@ p {
 }
 
 .user-link>a {
-	color: gray;
+	color: #333;
 }
 
 .date-rating {
 	text-align: left;
 	font-size: 15px;
 	margin-left: 15%;
-	color: gray;
+	color: #333;
 }
 
 .content .avatar {
@@ -194,12 +181,16 @@ a {
 }
 
 @media screen and (max-width:600px) {
-.topnav>a {
-			font-size: 18px;
-			padding-top: 10px;
-			padding-left: 5px;
-		}
-.topnav a:first-child {display: none;}
+#logo{display: none;}
+
+  .topnav a {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
 
 .card{margin: 0;padding: 0;}
 .content{margin-left: 30px; margin-top: 30px;}
