--- a/ProjekatWeb/WebContent/css/video.css
+++ b/ProjekatWeb/WebContent/css/video.css
@@ -1,54 +1,48 @@
 @charset "UTF-8";
 
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-
 html, body {
 	width: 100%;
 	height: 100%;
-	overflow: auto;
 }
-
-body {
-	background-image: url("../photos/pozadina1.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
+body{
+ background: #c3c3c3;
 }
-
 .topnav {
-	background: #000033;
-	opacity: 0.6;
-	overflow: hidden;
-	height: 10%;
+  overflow: hidden;
+  background-color: #333;
 }
 
 .topnav a {
-	float: left;
-	display: block;
-	color: #f2f2f2;
-	text-align: center;
-	padding: 18px 16px;
-	text-decoration: none;
-	font-size: 24px;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 24px;
 }
+#logo{
+	display: inline-block;
+}
+.topnav a:not(:first-child){
+	float: right;
+	opacity: 0.6;
+}
+
+.topnav a:hover {
+   opacity: 1;
+}
+
+
 #commentLikeButton{
 	border: none;
 	background: white;
 	cursor: pointer;
 	margin: 3px;
-}
-.topnav a:not(:first-child){
-	float: right;
-}
-.topnav a:hover {
-	background-color: #ddd;
-	color: black;
 }
 
 .container {
@@ -84,6 +78,7 @@ h2 {
 	padding: 2px;
 	word-wrap: break-word;
 	word-break: break-all;
+	color: #333;
 }
 
 .owner-info {
@@ -100,7 +95,7 @@ h2 {
 }
 
 .user-link>a {
-	color: gray;
+	color: #333;
 	text-decoration: none;
 }
 
@@ -121,7 +116,7 @@ p {
 
 i {
 	cursor: pointer;
-	color: gray;
+	color: #333;
 }
 
 .video-info>p {
@@ -345,11 +340,16 @@ textarea {
 	background: white;
 }
 @media screen and (max-width:600px) {
-	.topnav>a {
-		font-size: 20px;
-		padding-top: 10px;
-		padding-left: 5px;
-	}
+#logo{display: none;}
+
+  .topnav a{
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
 	.container {
 		grid-template-rows: 20% auto;
 	}
