--- a/ProjekatWeb/WebContent/css/editVideo.css
+++ b/ProjekatWeb/WebContent/css/editVideo.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-
 *{
     margin: 0;
     padding: 0;
@@ -36,9 +35,10 @@ body{
 .topnav a:hover {
    opacity: 1;
 }
-
 label{
 	color: white;
+	display: block;
+	font-size: 22px;
 }
 input[type=text], select, textarea{
     width: 100%;
@@ -81,8 +81,69 @@ input[type=submit]:hover {
 	font-weight: bold;
 	font-size: 20px;
 }
+.container-cb {
+    display: inline-block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 18px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    margin-top: 12px;
+}
 
 
+.container-cb input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    border-radius: 50%;
+}
+
+
+.container-cb:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+
+
+.container-cb input:checked ~ .checkmark {
+    background-color: #2196F3;
+}
+
+
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+
+.container-cb input:checked ~ .checkmark:after {
+    display: block;
+}
+
+
+.container-cb .checkmark:after {
+ 	top: 9px;
+	left: 9px;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background: white;
+}
 
 @media screen and (max-width:600px) {
 #logo{display: none;}
@@ -94,6 +155,6 @@ input[type=submit]:hover {
     margin: 0;
     padding: 14px;
   }
-  .container {width: 100%; margin: 20px auto;}
+    .container {width: 100%; margin: 20px auto;}
 
 }
