Created functionality for editing users

--- a/ProjekatWeb/WebContent/css/editUser.css
+++ b/ProjekatWeb/WebContent/css/editUser.css
@@ -35,12 +35,13 @@ body{
 .topnav a:hover {
    opacity: 1;
 }
+
 label{
 	color: white;
+	font-size: 18px;
 	display: block;
-	font-size: 22px;
 }
-input[type=text], select, textarea{
+input[type=text], select, textarea,input[type=password]{
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
@@ -50,7 +51,17 @@ input[type=text], select, textarea{
     margin-bottom: 16px;
     resize: none;
 }
-
+input[type=checkbox]{
+	color: white;
+	padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: none;
+    width: 25px;
+}
 h1,p{
 	color: white;
 }
