--- a/ProjekatWeb/WebContent/css/homepage.css
+++ b/ProjekatWeb/WebContent/css/homepage.css
@@ -52,7 +52,7 @@ body{
   background: #f1f1f1;
 }
 
-.topnav .search-container button {
+.topnav .search-container input[type=button] {
   float: right;
   padding: 6px 10px;
   margin-top: 8px;
@@ -63,7 +63,7 @@ body{
   cursor: pointer;
 }
 
-.topnav .search-container button:hover {
+.topnav .search-container input[type=button]:hover {
   background: #0b7dda;
 }
 .sidelogin {
@@ -113,7 +113,7 @@ input[type=submit] {
 	font-weight: bold;
 }
 
-button:hover {
+input[type=button]:hover {
     opacity:1;
 }
 label{
@@ -276,7 +276,7 @@ a{
 .topnav .search-container {
     float: none;
   }
-  .topnav a, .topnav input[type=text], .topnav .search-container button {
+  .topnav a, .topnav input[type=text], .topnav .search-container input[type=button] {
     float: none;
     display: block;
     text-align: left;
