--- a/ProjekatWeb/WebContent/css/user.css
+++ b/ProjekatWeb/WebContent/css/user.css
@@ -38,15 +38,15 @@ body{
 }
 .grid{
 	display: grid;
-	grid-template-columns: auto auto;
+	grid-template-columns: 90% 10%;
 	height: 100%;
 	width: 100%;
 }
 .container {
-		padding: 3em 3em;
+	padding-top: 3em;
 	background:#c3c3c3;
-	width: 100%;
-	height: 90%;
+	width: 90%;
+	height: 100%;
 	overflow-x:auto;
 	-webkit-user-select: none;        
 	-moz-user-select: none;
@@ -54,7 +54,8 @@ body{
 }
 
 .user-info {
-	grid-row: 1/3;
+	width: 100%;
+	margin-left: 4%;
 }
 
 .card {
@@ -102,11 +103,11 @@ p {
 }
 
 .row {
-	display: -ms-flexbox; 
-    display: flex;
-    -ms-flex-wrap: wrap; 
-    flex-wrap: wrap;
-    padding: 0 4px;
+	display: grid;
+	grid-template-columns: 25% 75%;
+	grid-gap:20px;
+	height: 100%;
+	width: 100%;
 }
 .column{
 	-ms-flex: 25%; 
@@ -114,6 +115,9 @@ p {
     max-width: 25%;
     padding: 6px 4px;
 }
+ .column-tab{
+        width: 65%;
+    }
 .column2{
 	-ms-flex: 15%; 
     flex: 15%;
@@ -126,7 +130,7 @@ p {
 	margin-left: 50px;;
 }
 .content img {
-	width: 60%;
+	width: 100%;
 	border-radius: 5%;
 	border:1px solid #333;
 }
@@ -233,6 +237,44 @@ a {
 	cursor: pointer;
 
 }
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+
+.tab button {
+    background:#666699;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+    width: 50%;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #ddd;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+    background: #ddd;
+}
 @media screen and (max-width:600px) {
 #logo{display: none;}
 
@@ -248,6 +290,7 @@ a {
 .card{margin: 0;padding: 0;}
 .content{margin-left: 30px; margin-top: 30px;}
 .content .avatar{width: 20px;height: 20px;}
+.content img{width: 60%;}
 .video{margin: 0;}
  .column {
         -ms-flex: 100%;
@@ -262,6 +305,13 @@ a {
     	.grid {
 		grid-template-rows: auto auto;
 	}
+	.user-info{grid-row:1;
+	grid-column: 1/3;}
+	.info{grid-row:2;
+	grid-column: 1/3;}
+		.row{
+		grid-template-rows: auto auto;
+		}
 		#menu {
 		margin: 10px 10px 0 0;
 		float: right;
