--- a/ProjekatWeb/WebContent/css/user.css
+++ b/ProjekatWeb/WebContent/css/user.css
@@ -228,7 +228,7 @@ a {
 	color: white;
 	opacity: 1;
 }
-.menu-button {
+.seondColumn {
 	grid-column: 2;
 }
 #menu {
@@ -274,6 +274,106 @@ a {
     border: 1px solid #ccc;
     border-top: none;
     background: #ddd;
+    height: auto;
+}
+
+input[type=button],#orderSubmit{
+	color: white;
+	background: #2196F3;
+	border: none;
+	float: left;
+	height: 30px;
+	width: 65px;
+	border-radius: 5%;
+	font-weight: bold;
+	cursor: pointer;
+	margin: 10px;
+}
+#orderSubmit{
+	background: #2196F3;
+	display: inline-block;
+}
+
+.container-rb {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.container-rb input {
+  position: absolute;
+  opacity: 0;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.container-rb:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.container-rb input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.container-rb input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.container-rb .checkmark:after {
+  top: 9px;
+  left: 9px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: white;
+}
+select{
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: none;
+}
+
+.orderVideos{
+width: 20%;
+height: auto;
+position: fixed;
+top: 20%;
+right: 0;
+background-color: rgba(0, 0, 0, 0.7);
+display: none;
 }
 @media screen and (max-width:600px) {
 #logo{display: none;}
