--- a/ProjekatWeb/WebContent/css/admin.css
+++ b/ProjekatWeb/WebContent/css/admin.css
@@ -154,60 +154,92 @@ img {
     width: 80%;
 }
 
-.container-cb {
-    display: inline-block;
-    position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
-    cursor: pointer;
-    font-size: 22px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+.container-rb {
+  display: inline-block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-.container-cb input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
+/* Hide the browser's default radio button */
+.container-rb input {
+  position: absolute;
+  opacity: 0;
 }
 
+/* Create a custom radio button */
 .checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 25px;
-    width: 25px;
-    background-color: #eee;
-    border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 50%;
 }
 
-.container-cb:hover input ~ .checkmark {
-    background-color: #ccc;
+/* On mouse-over, add a grey background color */
+.container-rb:hover input ~ .checkmark {
+  background-color: #ccc;
 }
 
-.container-cb input:checked ~ .checkmark {
-    background-color: #2196F3;
+/* When the radio button is checked, add a blue background */
+.container-rb input:checked ~ .checkmark {
+  background-color: #2196F3;
 }
 
+/* Create the indicator (the dot/circle - hidden when not checked) */
 .checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
+  content: "";
+  position: absolute;
+  display: none;
 }
 
-.container-cb input:checked ~ .checkmark:after {
-    display: block;
+/* Show the indicator (dot/circle) when checked */
+.container-rb input:checked ~ .checkmark:after {
+  display: block;
 }
 
-.container-cb .checkmark:after {
- 	top: 9px;
-	left: 9px;
-	width: 8px;
-	height: 8px;
-	border-radius: 50%;
-	background: white;
+/* Style the indicator (dot/circle) */
+.container-rb .checkmark:after {
+  top: 9px;
+  left: 9px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: white;
+}
+select{
+    width: 30%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: none;
+}
+#order{
+	color: white;
+	background: orange;
+	border: none;
+	float: right;
+	height: 30px;
+	width: 65px;
+	border-radius: 5%;
+	font-weight: bold;
+	cursor: pointer;
+	margin: 10px;
+}
+#order{
+	background: #2196F3;
+	display: inline-block;
 }
 @media screen and (max-width:600px) {
 #logo{display: none;}
